force-app/main/default/objects/Course_Application_Answers__c.object
<CustomObject>
    <fields>
        <fullName>ACPLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Course Preference</label>
        <referenceTo>Application_Course_Preference__c</referenceTo>
        <relationshipLabel>Course Application Answers</relationshipLabel>
        <relationshipName>Course_Application_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DropdownField1__c</fullName>
        <label>DropdownField1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>hello</fullName>
                </value>
                <value>
                    <fullName>hai</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DropdownField2__c</fullName>
        <label>DropdownField2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DropdownField3__c</fullName>
        <label>DropdownField3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LongQuestion10__c</fullName>
        <label>LongQuestion10</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LongQuestion1__c</fullName>
        <label>LongQuestion1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LongQuestion2__c</fullName>
        <label>LongQuestion2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ShortQuestion10__c</fullName>
        <label>ShortQuestion10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShortQuestion1__c</fullName>
        <label>ShortQuestion1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShortQuestion2__c</fullName>
        <label>ShortQuestion2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmissionId__c</fullName>
        <label>SubmissionId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Course Application Answers</label>
    <nameField>
        <displayFormat>CAA-{0}</displayFormat>
        <label>Course Application Answers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Application Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>